--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-synacor",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "ESLint configuration for Synacor javascript projects",
   "main": "index.js",
   "jsnext:main": "src/index.js",
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "test": "npm run lint && npm run build",
-    "lint": "eslint src",
+    "lint": "node_modules/.bin/eslint src",
     "build": "npm run clean && npm run buildMain && npm run buildTestRules",
     "clean": "rm -f index.js test-rules.js",
     "buildMain": "rollup -c rollup.config.js -f cjs -o $npm_package_main $npm_package_jsnext_main",
@@ -40,13 +40,13 @@
     "url": "https://github.com/synacor/eslint-config-synacor.git"
   },
   "dependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint-plugin-compat": "^1.0.0",
-    "eslint-plugin-mocha": "^4.0.0",
-    "eslint-plugin-react": "^7.0.0"
+    "babel-eslint": "^8.1.0",
+    "eslint-plugin-compat": "^1.0.4",
+    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-react": "^7.5.1"
   },
   "devDependencies": {
-    "eslint": "^4.4.1",
+    "eslint": "^4.14.0",
     "eslint-config-synacor": "latest",
     "rollup": "^0.45.2",
     "rollup-plugin-buble": "^0.15.0"
